kubernetes/mini/core/flux-system/fluxcd/addons/webhooks/github/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-webhook-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: notification-controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: nginx-external
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
